<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Vault Helper for Destiny</string>
    <string name="title_activity_login">Login</string>
    <string name="refresh">Refresh</string>
    <string name="login">Login</string>
    <string name="relogin">Relogin</string>
    <string name="login_information"><![CDATA[
<p>Don\'t be afraid, Vault Helper for Destiny does not store any of your <b>psn</b> or <b>xbox</b> account information.</p>
<p>When you click login button, your internal web browser will be pointed to psn or microsoft account authorization site. When you provide correct authorization data, internet browser will be hidden but all operation on you will be done using that browser.
]]></string>
    <string name="tracker_category_user_action">UserAction</string>
    <string name="tracker_action_click">Click</string>
    <string name="tracker_category_database">Database</string>
    <string name="tracker_action_loaded">Loaded</string>
    <string name="login_message">Please select your console</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel">Cancel</string>
    <string name="bucket_filter_title">Visible buckets</string>
    <string name="app_name_short">Vault Helper</string>
    <string name="search">Search</string>
    <string name="search_hint">Search items</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="toggle_filters">Filters</string>
    <string name="bucket_filter_label">Bucket</string>
    <string name="damage_type_filter_label">Damage</string>

    <string name="ad_fullscreen" translatable="false">ca-app-pub-4225324557097072/4297656148</string>
    <string name="ad_small" translatable="false">ca-app-pub-4225324557097072/5774389341</string>
    <string name="ad_text">Do you know that programmers have to buy groceries, pay rent, go for vacations? If you aware of it you can just click the ad below to support one developer, or you can buy some in app products to support me even more.</string>
    <string name="buy_pro">Support the developer</string>
    <string name="completed_filter_label">Completed</string>
    <string name="critical_error">Critical error</string>
    <string name="no_url_error">Cannot connect to %s site</string>
    <string name="loading_vault_inventory_message">Loading vault inventory</string>
    <string name="loading_user_message">Loading user</string>
    <string name="searching_your_account_message">Searching your account</string>
    <string name="downloading_message">Downloading information about your account</string>
    <string name="loading_your_items_message">Loading your items</string>
    <string name="loading_inventory_message">Loading inventory for %s</string>
    <string name="vault">Vault</string>
    <string name="settings">Settings</string>
    <string name="ad">Ad</string>
    <string name="connecting_to_bungie">Connecting to http://www.bungie.com/ site</string>
    <string name="primary_weapons_bucket">Primary Weapons</string>
    <string name="special_weapons_bucket">Special Weapons</string>
    <string name="heavy_weapons_bucket">Heavy Weapons</string>
    <string name="helmets_bucket">Helmets</string>
    <string name="chest_armors_bucket">Chest Armors</string>
    <string name="gauntlets_bucket">Gauntlets</string>
    <string name="leg_armor_bucket">Leg Armor</string>
    <string name="class_armor_bucket">Class Armor</string>
    <string name="materials_bucket">Materials</string>
    <string name="consumables_bucket">Consumables</string>
    <string name="emblems_bucket">Emblems</string>
    <string name="ghosts_bucket">Ghosts</string>
    <string name="shaders_bucket">Shaders</string>
    <string name="ships_bucket">Ships</string>
    <string name="vehicle_bucket">Vehicle</string>
    <string name="arc_damage">Arc</string>
    <string name="solar_damage">Solar</string>
    <string name="void_damage">Void</string>
    <string name="is_completed">Is completed</string>
    <string name="is_not_completed">Is not completed</string>
    <string name="reload">Reload</string>
    <string name="show_all">Show all</string>
    <string name="equip">Equip</string>
    <string name="rate_me">Rate Me</string>
    <string name="do_equip_in_progress">Equipping item</string>
    <string name="do_equip_finished">Item %s is equipped</string>
    <string name="move_to">Move to %s</string>
    <string name="layouts_label">Labels</string>
    <string name="new_layout_button">New label</string>
    <string name="logout">Logout</string>
    <string name="send_logs">Send logs</string>

    <string name="message_subject">Vault helper log</string>
    <string name="acquiring_log_progress_dialog_message">Acquiring log from the system &#8230;</string>
    <string name="chooser_title">"Select an application to send the log"</string>
    <string name="failed_to_get_log_message">"Failed to get the log from the system."</string>
    <string name="main_dialog_text">"This application will attempt to collect the device log.
The collected log will be sent using an application of your choice.
You also will have an opportunity to see and modify the data being sent."
    </string>
    <string name="device_info_fmt" translatable="false">
Log Collector version: <xliff:g id="application_version">%s</xliff:g>\n
Device model: <xliff:g id="device_model">%s</xliff:g>\n
Firmware version: <xliff:g id="firmware_revision">%s</xliff:g>\n
Kernel version: <xliff:g id="kernel_version">%s</xliff:g>\n
Build number: <xliff:g id="build_number">%s</xliff:g>\n
    </string>
    <string name="developer_email" translatable="false">damian@swistowski.org</string>
    <string name="show_login_page">Show login page</string>
    <string name="add_new_layout_label">Add new label</string>
    <string name="add_new_layout_hint">New label name</string>
    <string name="artifacts_bucket">Artifacts</string>
    <string name="emotes_bucket">Emotes</string>
    <string name="tier_name_rare">Rare</string>
    <string name="tier_name_common">Common</string>
    <string name="tier_name_exotic">Exotic</string>
    <string name="tier_name_legendary">Legendary</string>
    <string name="tier_filter_label">Tier</string>
    <string name="light_level_filter_label">Light level</string>
    <string name="ligth_level_0" translatable="false">-200</string>
    <string name="ligth_level_1" translatable="false">200-250</string>
    <string name="ligth_level_2" translatable="false">250-280</string>
    <string name="ligth_level_3" translatable="false">280-300</string>
    <string name="ligth_level_4" translatable="false">300-310</string>
    <string name="ligth_level_5" translatable="false">310+</string>
    <string name="please_select_a_quantity">Please select a quantity</string>
    <string name="armor_for_hunter">Hunter</string>
    <string name="armor_for_titan">Titan</string>
    <string name="armor_for_warlock">Warlock</string>
    <string name="item_for_label">Is for</string>
    <string name="cannot_move_error">Cannot move equipped item, Do not know how to unequip %s</string>
    <string name="title_activity_labels_editor">Labels Editor</string>
    <string name="new_label">New label</string>
    <string name="edit_layout_label">Edit label</string>
    <string name="confirm_label_delete">Delete label %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="labels_label">Labels</string>
    <string name="isues_comments">Issues, suggestions</string>
    <string name="details">details</string>
    <string name="options">options</string>
    <string name="Logo">Logo</string>
    <string name="share_on_google_plus">Share on Google+</string>
    <string name="google_plus_share_title">Vault Helper for Destiny, best destiny item manager</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string-array name="pref_ordering_titles">
        <item>Type→Tier→Light Level (grouped by 10)→Name</item>
        <item>Type→Tier→Light Level→Name</item>
        <item>Type→Tier→Name</item>
        <item>Type→Tier→Location→Name</item>
        <item>Location→Type→Tier→Light Level→Name</item>
        <item>Name</item>
    </string-array>

    <string-array name="pref_ordering_values" translatable="false">
        <item>light_10</item>
        <item>light</item>
        <item>tier_name</item>
        <item>location_name</item>
        <item>location_tier</item>
        <item>name</item>
    </string-array>



    <string-array name="pref_tab_styles_titles" translatable="false">
        <item>Warlock 36</item>
        <item>36 Warlock Human Male</item>
        <item>36 Warlock H♂</item>
    </string-array>
    <string-array name="pref_tab_styles_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_tab_style">Tab style</string>
    <string name="pref_desription_show_all_label">Show all items</string>
    <string name="pref_desription_show_all_off">Show only item which can be moved</string>
    <string name="pref_show_all_label">Show not moveable items</string>
    <string name="help">Help</string>
    <string name="pref_ordering_title">Order</string>
    <string name="is_locked">Is locked</string>
    <string name="is_not_locked">Is not locked</string>
    <string name="locked_filter_label">Locked</string>
    <string name="unlock_action_label">Unlock</string>
    <string name="lock_action_label">Lock</string>
    <string name="do_unlock_in_progress">Unlocking item</string>
    <string name="do_lock_in_progress">Locking item</string>
    <string name="do_unlock_success">Item unlocked</string>
    <string name="do_unlock_error">Cannot unlock item</string>
    <string name="do_lock_success">Item is locked</string>
    <string name="do_lock_error">Cannot lock item</string>
    <string name="share_label">Inform your friends</string>
    <string name="share_action_label">Inform your friends</string>
    <string name="share_text" >Hey check out Vault Helper for Destiny at: https://play.google.com/store/apps/details?id=org.swistowski.vaulthelper&amp;utm_source=share_button</string>
    <string name="materials">Materials</string>

</resources>
