<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dvh="http://schemas.android.com/apk/res-auto" >
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        dvh:showAsAction="ifRoom|collapseActionView"
        dvh:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/toggle_filters"
        android:icon="@drawable/ic_filter_list_white_24dp"
        dvh:showAsAction="ifRoom"
        android:title="@string/toggle_filters"
        />
    <item
        android:id="@+id/show_all"
        android:checkable="true"
        android:icon="@drawable/abc_ic_menu_selectall_mtrl_alpha"
        dvh:showAsAction="ifRoom"
        android:title="@string/show_all" />

    <item android:id="@+id/action_refresh"
        android:title="@string/refresh" />


</menu>