<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <SwitchPreference
        android:key="example_switch"
        android:title="@string/pref_title_social_recommendations"
        android:summary="@string/pref_description_social_recommendations"
        android:defaultValue="true" />
    -->
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <!--
    <EditTextPreference
        android:key="example_text"
        android:title="@string/pref_title_display_name"
        android:defaultValue="@string/pref_default_display_name"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
    -->
    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:key="example_list"
        android:title="@string/pref_title_add_friends_to_messages"
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    -->
    <ListPreference
        android:key="tab_style"
        android:title="@string/pref_title_tab_style"
        android:defaultValue="0"
        android:entries="@array/pref_tab_styles_titles"
        android:entryValues="@array/pref_tab_styles_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        />

    <SwitchPreference
        android:key="show_all"
        android:title="@string/pref_show_all_label"
        android:summaryOn="@string/pref_desription_show_all_label"
        android:summaryOff="@string/pref_desription_show_all_off"
        android:defaultValue="true" />
</PreferenceScreen>
